hphp/test/zend/bad/ext/standard/tests/file/unlink_variation1.php.skipif
<?php
if (substr(PHP_OS, 0, 3) == 'WIN') {
    die('skip only on Linux');
}
// Skip if being run by root (files are always readable, writeable and executable)
$filename = dirname(__FILE__)."/unlink_root_check.tmp";
$fp = fopen($filename, 'w');
fclose($fp);
if(fileowner($filename) == 0) {
        unlink ($filename);
        die('skip cannot be run as root');
}

unlink($filename);
?>